[package]
name = "minetest-servers"
version = "0.1.0"
edition = "2021"
authors = ["Lizzy Fleckenstein"]
description = "Output info about minetest servers fetched from server list. Based on http://news.dieweltistgarnichtso.net/bin/minetest-servers"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
itertools = "0.10.5"
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
